--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ margin-bottom:1cm;
 margin-top:1.5cm;
  
 }body {
-   background-image: url("../images/whitehouse.jpg");
+   background-image: url("whitehouse.jpg");
  }
 
 
@@ -89,4 +89,5 @@ img{
 }
 .side2{
   width: 25%;
+
 }
